k8s/sonarr/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sonarr
  labels:
    name: sonarr
