k8s/sonarr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: sonarr
  labels:
    app: sonarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
        - name: sonarr
          image: linuxserver/sonarr:4.0.19.2979-ls320
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
          ports:
            - containerPort: 8989
          volumeMounts:
            - mountPath: /config
              name: sonarr
            - mountPath: /data
              name: sonarr-data
      volumes:
        - name: sonarr
          hostPath:
            path: /opt/sonarr/config
        - name: sonarr-data
          hostPath:
            path: /opt/media/data
