k8s/sonarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: sonarr
  labels:
    app: sonarr
    kubernetes.io/name: "sonarr"
spec:
  type: NodePort
  ports:
    - name: sonarr
      port: 8989
      targetPort: 8989
      nodePort: 30004
  selector:
    app: sonarr
